--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@ index
 <!DOCTYPE html>
 <html>
 <head>
-	<title>nithish</title>
+	<title >nithish</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<p> hi im nithish</p>
+<p class="intro" > hi im nithish</p>
 <img src="image.jpg"width=550px height=500px>
 </body>
 </html>
